karnc/tests/fixtures/negative/202_actor_unknown_scheme/src/demo.karn
context demo

actor Caller2 { auth = Bogus }
